--- a/index.html
+++ b/index.html
@@ -45,6 +45,109 @@
           </form>
         </div>
       </nav>
+
+    <!--Header-->
+    <div class="jumbotron">
+        <h1 class="display-4">Jeff Wehner</h1>
+        <p class="lead">I are coder, I make computer beep boop boop.</p>
+        <hr class="my-4">
+        <p>What is life? What is purpose? What is anything?</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Hit Me Up Dog</a>
+      </div>
+    <!--About Section-->
+    <section id="about">
+      <h1>About Me</h1>
+      <div>
+      <h3>This is where I talk about myself. I am very bad at talking about myself. This is simply filler until I figure out what I should put here.</h3>
+      </div> 
+    </section>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+    <!--Project Section-->
+    <section  id="project">
+      <div>
+      <h1>Projects Yo</h1>
+      </div>
+    </section>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    <!--Contact Section-->
+    <section id="contact">
+        <div class="container">
+            <h2 class="text-center text-uppercase">Contact Me</h2>
+            <div class="row">
+              <form action="https://formspree.io/jawehner@gmail.com" method="POST">
+                <div class="control-group">
+                  <div class="form-group">
+                    <label>Name</label>
+                    <input
+                      type="text"
+                      class="form-control"
+                      placeholder="Your Name"
+                      id="name"
+                      required
+                      data-validation-required-message="Please enter your name"
+                      name="name"
+                      >
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <div class="form-group">
+                    <label>Email Address</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      placeholder="Your Email"
+                      id="email"
+                      required
+                      data-validation-required-message="Please enter your email"
+                      name="_replyto"
+                    >
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="control-group">
+                  <div class="form-group">
+                    <textarea
+                      class="form-control"
+                      rows="7"
+                      placeholder="Your Message"
+                      id="message"
+                      required
+                      data-validation-required-message="Please leave a message"
+                      name="message"
+                    ></textarea>
+                    <p class="help-block text-danger"></p>
+                  </div>
+                </div>
+                <div class="text-center">
+                  <div id="success"></div>
+                  <button type="submit" class="btn btn-lg btn-black">
+                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                    Send Message
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+    </section>
+
+    <!--Footer Section-->
+    <footer></footer>
+
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
