--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Bungee|Righteous" rel="stylesheet">
     <title>Jeff Wehner</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/main.css">
@@ -48,11 +49,11 @@
 
     <!--Header-->
     <div class="jumbotron">
-        <h1 class="display-4">Jeff Wehner</h1>
-        <p class="lead">I are coder, I make computer beep boop boop.</p>
+        <h1 class="display-1">Jeff Wehner</h1>
+        <p class="lead">.NET Developer Extraordinaire</p>
         <hr class="my-4">
-        <p>What is life? What is purpose? What is anything?</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Hit Me Up Dog</a>
+        <p>My Mission? To Boldly Go Where No Coder Has Gone Before.</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Make First Contact</a>
       </div>
     <!--About Section-->
     <section id="about">
@@ -73,6 +74,8 @@
     <section  id="project">
       <div>
       <h1>Projects Yo</h1>
+        <a class="btn btn-primary btn-lg" href = "https://codepen.io/jawehner/pen/ZqZqwN/" role="button" target=blank >CSS Creature</a>
+        <a class="btn btn-primary btn-lg" href = "https://jawehner.github.io/static_storefront/" role="button" target=blank >Static Storefront</a>  
       </div>
     </section>
 <br>
