--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Bungee|Righteous" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">
     <title>Jeff Wehner</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./CSS/main.css">
@@ -50,9 +50,8 @@
     <!--Header-->
     <div class="jumbotron">
         <h1 class="display-1">Jeff Wehner</h1>
-        <p class="lead">.NET Developer Extraordinaire</p>
+        <p class="lead">My Mission? To Boldly Go Where No Coder Has Gone Before.</p>
         <hr class="my-4">
-        <p>My Mission? To Boldly Go Where No Coder Has Gone Before.</p>
         <a class="btn btn-primary btn-lg" href="#" role="button">Make First Contact</a>
       </div>
     <!--About Section-->
@@ -75,7 +74,7 @@
       <div>
       <h1>Projects Yo</h1>
         <a class="btn btn-primary btn-lg" href = "https://codepen.io/jawehner/pen/ZqZqwN/" role="button" target=blank >CSS Creature</a>
-        <a class="btn btn-primary btn-lg" href = "https://jawehner.github.io/static_storefront/" role="button" target=blank >Static Storefront</a>  
+        <a class="btn btn-primary btn-lg" href = "https://github.com/jawehner/static_storefront.git" role="button" target=blank >Static Storefront</a>  
       </div>
     </section>
 <br>
