--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Jeff Wehner</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,24 +41,35 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control mr-sm-2" type
+            ="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
-      </nav>
+      </nav> -->
 
     <!--Header-->
     <div class="jumbotron">
         <h1 class="display-1">Jeff Wehner</h1>
+        <h1>.NET Developer</h1>
+        <br>
         <p class="lead">My Mission? To Boldly Go Where No Coder Has Gone Before.</p>
         <hr class="my-4">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Make First Contact</a>
+        <a class="btn btn-warning btn-lg" href="#contact" role="button">Make First Contact</a>
       </div>
+      <br>
+      <br>
+
+      <br>
+      <br>
     <!--About Section-->
     <section id="about">
       <h1>About Me</h1>
       <div>
-      <h3>This is where I talk about myself. I am very bad at talking about myself. This is simply filler until I figure out what I should put here.</h3>
+      <h2>This is where I talk about myself. I am very bad at talking about myself. 
+        This is simply filler until I figure out what I should put here. </h2>
+      <!-- <h2>There are some who say that space is the final frontier. I believe the real final frontier is within our reach 
+        in the world of coding.  </h2> -->
       </div> 
     </section>
   <br>
@@ -72,11 +83,15 @@
     <!--Project Section-->
     <section  id="project">
       <div>
-      <h1>Projects Yo</h1>
-        <a class="btn btn-primary btn-lg" href = "https://codepen.io/jawehner/pen/ZqZqwN/" role="button" target=blank >CSS Creature</a>
-        <a class="btn btn-primary btn-lg" href = "https://github.com/jawehner/static_storefront.git" role="button" target=blank >Static Storefront</a>  
+      <h1>Projects</h1>
+        <a class="btn btn-warning btn-lg"  href = "https://codepen.io/jawehner/full/ZqZqwN" role="button" target=blank >CSS Creature</a>
+        <a class="btn btn-warning btn-lg" href = "https://jawehner.github.io/static_storefront/" role="button" target=blank >Static Storefront</a>  
       </div>
     </section>
+<br>
+<br>
+<br>
+<br>
 <br>
 <br>
 <br>
@@ -88,9 +103,11 @@
     <!--Contact Section-->
     <section id="contact">
         <div class="container">
-            <h2 class="text-center text-uppercase">Contact Me</h2>
+            <h1 class="text-center text-uppercase " href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">Contact Me</h1>
             <div class="row">
-              <form action="https://formspree.io/jawehner@gmail.com" method="POST">
+              <div class="col-lg-1"></div>
+              <div class="col-lg-10">
+              <form action="https://formspree.io/jawehner@gmail.com" method="POST" class="contact-form">
                 <div class="control-group">
                   <div class="form-group">
                     <label>Name</label>
@@ -143,9 +160,23 @@
                   </button>
                 </div>
               </form>
+              </div>
             </div>
           </div>
     </section>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
     <!--Footer Section-->
     <footer></footer>
