--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
         <h1 class="display-1">Jeff Wehner</h1>
         <h1>.NET Developer</h1>
         <br>
-        <p class="lead">My Mission? To Boldly Go Where No Coder Has Gone Before.</p>
+        <p class="lead">My Mission? To Boldly Go Where No Coder Has Gone Before</p>
         <hr class="my-4">
         <a class="btn btn-warning btn-lg" href="#contact" role="button">Make First Contact</a>
       </div>
       <br>
       <br>
+
 
       <br>
       <br>
@@ -68,8 +69,8 @@
       <div>
       <h2>This is where I talk about myself. I am very bad at talking about myself. 
         This is simply filler until I figure out what I should put here. </h2>
-      <!-- <h2>There are some who say that space is the final frontier. I believe the real final frontier is within our reach 
-        in the world of coding.  </h2> -->
+      <!-- <h2>There are some who say that space is the final frontier. 
+        There is another "final" frontier within our reach in the boundless world of coding.   </h2> -->
       </div> 
     </section>
   <br>
@@ -82,10 +83,31 @@
   <br>
     <!--Project Section-->
     <section  id="project">
-      <div>
+      
       <h1>Projects</h1>
-        <a class="btn btn-warning btn-lg"  href = "https://codepen.io/jawehner/full/ZqZqwN" role="button" target=blank >CSS Creature</a>
+      <br>
+      <br>
+      <div class="creature-project">
+        <br>
+        <a  class="btn btn-warning btn-lg" href = "https://codepen.io/jawehner/full/ZqZqwN" role="button" target=blank >CSS Creature</a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
+      <br>
+      <br>
+      <div class="storefront-project">  
+        <br>
         <a class="btn btn-warning btn-lg" href = "https://jawehner.github.io/static_storefront/" role="button" target=blank >Static Storefront</a>  
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
       </div>
     </section>
 <br>
@@ -156,7 +178,7 @@
                   <div id="success"></div>
                   <button type="submit" class="btn btn-lg btn-black">
                     <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                    Send Message
+                    Make it so
                   </button>
                 </div>
               </form>
