--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item dropdown">
+
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
               </a>
@@ -46,7 +47,21 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
           </form>
         </div>
-      </nav> -->
+      </nav> --> -->
+
+      <nav class="navbar navbar-light ">
+        <a class="navbar-brand" href="#">Jeff Wehner</a>
+        <div class="dropdown">
+          <button onclick="myFunction()" class="dropbtn">Menu</button>
+            <div id="myDropdown" class="dropdown-content">
+              <a href="#about">About Me</a>
+              <a href="#project">Projects</a>
+              <a href="#contact">Contact</a>
+              <a href="https://www.linkedin.com/in/jeff-wehner-7b9443176/" target="blank">LinkedIn</a>
+            </div>
+          </div>
+        </div>
+      </nav>
 
     <!--Header-->
     <div class="jumbotron">
@@ -59,17 +74,19 @@
       </div>
       <br>
       <br>
-
-
+      <br>
+      <br>
+      <br>
+      <br>
       <br>
       <br>
     <!--About Section-->
     <section id="about">
-      <h1>About Me</h1>
+      <p>About Me</p>
       <div>
-      <h2>This is where I talk about myself. I am very bad at talking about myself. 
-        This is simply filler until I figure out what I should put here. </h2>
-      <!-- <h2>There are some who say that space is the final frontier. 
+      <p>This is where I talk about myself. I am very bad at talking about myself. 
+        This is simply filler until I figure out what I should put here. </p>
+      <!-- <h2>Some say that space is the final frontier. 
         There is another "final" frontier within our reach in the boundless world of coding.   </h2> -->
       </div> 
     </section>
@@ -126,6 +143,8 @@
     <section id="contact">
         <div class="container">
             <h1 class="text-center text-uppercase " href="https://fonts.googleapis.com/css?family=Bungee" rel="stylesheet">Contact Me</h1>
+            <br>
+            <br>
             <div class="row">
               <div class="col-lg-1"></div>
               <div class="col-lg-10">
