--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <p>About Me</p>
     <div>
       <p>This is where I talk about myself. I am very bad at talking about myself.
-        This is simply filler until I figure out what I should put here. </p>
+        You should just hire me. </p>
     </div>
   </section>
   <br>
