--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
   <section id="about">
     <p>About Me</p>
     <div>
-      <p>This is where I talk about myself. I am very bad at talking about myself.
-        You should just hire me. </p>
+      <p>I am a .NET developer with a limitless thirst for learning 
+        and drive to produce stellar code. I believe that the Internet is humamity's greatest
+        achievement and our greatest asset for the future in expanding our minds and connecting the world together.
+      Being a part of that future is the one of the greatest passions in my life. </p>
     </div>
   </section>
   <br>
@@ -90,6 +92,19 @@
       <br>
       <a class="btn btn-warning btn-lg" href="https://jawehner.github.io/static_storefront/" role="button" target=blank>Static
         Storefront</a>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+    <br>
+    <br>
+    <div class="starfinder-organizer-project">
+      <br>
+      <a class="btn btn-warning btn-lg" href="https://rpghomebrew.azurewebsites.net/" 
+      role="button" target=blank>Starfinder RPG Organizer</a>
       <br>
       <br>
       <br>
