resume link added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
         <a href="https://www.linkedin.com/in/jeff-wehner-7b9443176/" target="blank">LinkedIn</a>
+        <a href="https://docs.google.com/document/d/1q06Na4MtEBXEUGG4fdBbeOi3TICZklpy2DjS-BPpsjo/edit?usp=sharing" target="blank">Resume</a>
       </div>
     </div>
     </div>
