--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
         <a href="https://www.linkedin.com/in/jeff-wehner-7b9443176/" target="blank">LinkedIn</a>
-        <a href="https://docs.google.com/document/d/1q06Na4MtEBXEUGG4fdBbeOi3TICZklpy2DjS-BPpsjo/edit?usp=sharing" target="blank">Resume</a>
+        <a href="https://drive.google.com/file/d/1VLgvrWOsifuYZDxOhF_H-TfOvf7l3zF_/view" target="blank">Resume</a>
       </div>
     </div>
     </div>
@@ -56,9 +56,9 @@
     <p>About Me</p>
     <div>
       <p>I am a .NET developer with a limitless thirst for learning 
-        and drive to produce stellar code. I believe that the Internet is humamity's greatest
-        achievement and our greatest asset for the future in expanding our minds and connecting the world together.
-      Being a part of that future is the one of the greatest passions in my life. </p>
+        and a drive to produce stellar code. I believe that the Internet is humamity's greatest
+        achievement and is our greatest asset for the future in expanding our minds and bringing the world together.
+      Being a part of that future is one of the greatest passions in my life. </p>
     </div>
   </section>
   <br>
@@ -106,6 +106,19 @@
       <br>
       <a class="btn btn-warning btn-lg" href="https://rpghomebrew.azurewebsites.net/" 
       role="button" target=blank>Starfinder RPG Organizer</a>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+    </div>
+    <br>
+    <br>
+    <div class="retro-machines">
+      <br>
+      <a class="btn btn-warning btn-lg" href="https://retromachines.herokuapp.com/" 
+        role="button" target=blank>Retro Machines</a>
       <br>
       <br>
       <br>
