--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <p>About Me</p>
     <div>
       <p>I am a .NET developer with a limitless thirst for learning 
-        and a drive to produce stellar code. I believe that the Internet is humamity's greatest
+        and a drive to produce stellar code. I believe that the Internet is humanity's greatest
         achievement and is our greatest asset for the future in expanding our minds and bringing the world together.
       Being a part of that future is one of the greatest passions in my life. </p>
     </div>
