--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
         <a href="https://www.linkedin.com/in/jeff-wehner-7b9443176/" target="blank">LinkedIn</a>
-        <a href="https://drive.google.com/file/d/1VLgvrWOsifuYZDxOhF_H-TfOvf7l3zF_/view" target="blank">Resume</a>
+        <a href="https://docs.google.com/document/d/1qsvSEjF-Ook_XY3BJG6Jvkvuq8q4m2E7HAfWipuUJRc/edit?usp=sharing" target="blank">Resume</a>
       </div>
     </div>
     </div>
