--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#project">Projects</a>
         <a href="#contact">Contact</a>
         <a href="https://www.linkedin.com/in/jeff-wehner-7b9443176/" target="blank">LinkedIn</a>
-        <a href="https://docs.google.com/document/d/1qsvSEjF-Ook_XY3BJG6Jvkvuq8q4m2E7HAfWipuUJRc/edit?usp=sharing" target="blank">Resume</a>
+        <a href="https://docs.google.com/document/d/e/2PACX-1vSesaxJvST7Bb959opKKjtgluycWggJhJpFS-IpVT2ksq2OdMY70HvzHKvFquNe46nnO76lF5ua8j9w/pub" target="blank">Resume</a>
       </div>
     </div>
     </div>
